fixed the buttons icons (not centered) in the top bar area and cleaned up code in that section

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
 
 .btn-phone, .btn-support, .btn-contact, .btn-hamburger, .btn-search, .btn-small-search {
   display: inline-flex;
+  align-items: center;
+  justify-content: center;
   color: white;
   font-size: 1.125rem;
   cursor: pointer;
